--- a/content-web/src/index.html
+++ b/content-web/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Contoso Neuro Conference(콘토소뉴로컨퍼런스)</title>
+  <title>Contoso(콘토소뉴로컨퍼런스)</title>
   <base href="/">
 
   <link rel="stylesheet" href="assets/stylesheets/font-awesome.min.css"/>
